# signal-generator

./: .gitignore  CMakeLists.txt  Makefile  README.md  signal-generator.cpp  signal-generator.h  widget.cpp  widget.hpp
testing/: Makefile  README.md  signal-generator.cpp  signal-generator.h
